--- a/Volume 1.html
+++ b/Volume 1.html
@@ -1,7 +1,8 @@
 <html>
 <a href="The Dawn of Vergiland.html">HOME<a/>
 <h1>CHAPTERS</h1>
-<a href="Chapter 1 V.1.html">Chapter 1</a>
+<p><a href="Chapter 1 V.1.html">Chapter 1</a></p>
+<p><a href="Chapter 2 V.1.html">Chapter 2</a></p>
 
 
 </html>
