--- a/Volume 1.html
+++ b/Volume 1.html
@@ -3,6 +3,6 @@
 <h1>CHAPTERS</h1>
 <p><a href="Chapter 1 V.1.html">Chapter 1</a></p>
 <p><a href="Chapter 2 V.1.html">Chapter 2</a></p>
-
+<p><a href="Chapter 3 V.1.html">Chapter 3</a></p>
 
 </html>
