--- a/Volume 1.html
+++ b/Volume 1.html
@@ -4,5 +4,5 @@
 <p><a href="Chapter 1 V.1.html">Chapter 1</a></p>
 <p><a href="Chapter 2 V.1.html">Chapter 2</a></p>
 <p><a href="Chapter 3 V.1.html">Chapter 3</a></p>
-
+<p><a href="Chapter 4 V.1.html">Chapter 4</a></p>
 </html>
