Update The Dawn of Vergiland.html

--- a/The Dawn of Vergiland.html
+++ b/The Dawn of Vergiland.html
@@ -2,7 +2,7 @@
 <h1>THE DAWN OF VERGILAND</h1>
 ~<a href="Volume 1.html">Volume 1</a>
 
-~<a href="Volume 1 Mal.html">Volume 1(Malay)</a>
+<p>~<a href="Volume 1 Mal.html">Volume 1(Malay)</a></p>
 
 
 </html>
