--- a/Volume 1.html
+++ b/Volume 1.html
@@ -6,4 +6,6 @@
 <p><a href="Chapter 3 V.1.html">Chapter 3</a></p>
 <p><a href="Chapter 4 V.1.html">Chapter 4</a></p>
 <p><a href="Chapter 5 V.1.html">Chapter 5</a></p>
+<p><a href="Chapter 6 V.1.html">Chapter 6</a></p>
+<p><a href="Chapter 7 V.1.html">Chapter 7</a></p>
 </html>
